background added and main container foundation set

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,19 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   
 }
+.container{
+ 
+  width: 90%;  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  z-index: 1;
+  background-color: #f4f1ec;
+  font-family: 'Source Sans Pro', sans-serif;
+  padding-left: 60px;
+
+}
 
 
 
