--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 1;
 
 }
 
@@ -29,3 +30,5 @@ nav p {
 #fa-angle-double-down {
   color: red;
 }
+
+
