--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,14 +6,14 @@ header {
   align-items: center;
   justify-content: center;
   align-items: center;
-  z-index: 2;
-  background-color: #FF0000;
+  z-index: -2;
+  background-color: green;
   
   
 
 }
 
 header {
-  background: url(/images/basketball.png);
-  z-index: -2;
+  background-image: url(/images/basketball.png);
+  z-index: 2;
 }
