--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -16,8 +16,11 @@
   
 
 }
-
+main h2 {
+  padding-left: 200px;
+}
 .upperHalfTextbox {
+  
   border-bottom: black solid;
   width: 100%;
 
@@ -27,11 +30,13 @@
 display: flex;
 align-items: center;
 justify-content: space-between;
+font-family: 'Bungee', cursive, sans-serif;
 }
 
 textarea {
   width: 100%;
   padding: 5px;
+  
 }
 
 .tweetButton {
