--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -75,3 +75,21 @@ align-content: center;
 text-align: center;
 
 }
+
+article header{
+  height: 90px;
+  margin: 0em 0em 0.313em 0em;
+  
+  background-image: none;
+  width: 95%;
+  background: none;
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  font-family: 'Bungee', cursive, sans-serif;
+  
+}
+
+
