--- a/public/styles/existingTweets.css
+++ b/public/styles/existingTweets.css
@@ -3,9 +3,9 @@
   display: block;
   padding-left: 5%;
   padding-right: 0%;
-  margin-left: 12.5%;
-  margin-right:2.5%;
-  width: 82.5%;
+  margin-left: 0;
+  margin-right:10.5%;
+  width: 100%;
   
   
   
