--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,16 +8,18 @@
   align-items: center;
   justify-content: space-between;
   border-color: rgba(250, 250, 250, .25);
+  margin-top: 100px;
   
 }
 
 .userTweet {
   width: 100%;
+
   
 
 }
 main h2 {
-  padding-left: 200px;
+  padding-left: 150px;
 }
 .upperHalfTextbox {
   
