--- a/public/styles/existingTweets.css
+++ b/public/styles/existingTweets.css
@@ -55,6 +55,10 @@
   opacity: 0.5;
   box-shadow:yellow;
 }
+
+article:hover {
+  box-shadow: 10px 10px grey;
+}
 /* box shadow object not working */
 
 
