--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -35,6 +35,149 @@ main {
 }
 
 
+@media (min-width: 768px) {
+  body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0 25px;
+  }
+  .c1 {
+    width: 25%;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    padding-top: 10em;
+  }
+
+  .container {
+    flex: 1 1 100%;
+    width: 75%;
+  }
+  #tweetContainer {
+    width: 100%;
+  }
+
+  .navBar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display:flex;
+  }
+
+  header {
+    height: 410px;
+  }
+
+  #tweet-text {
+  
+    margin-top: 198px;
+    
+  }
+
+  .userTweet {
+    width: 100%;
+
+    height: 50%;
+    
+  
+  }
+  .alert-char-exceeding {
+
+    font-family: 'Source Sans Pro', sans-serif;
+    display: flex;
+    align-items: center;
+    border:thin solid red;
+    padding-left: 1em;
+    
+  
+  }
+  
+  .alert-tweet-blank {
+  
+    font-family: 'Source Sans Pro', sans-serif;
+    display: flex;
+    align-items: center;
+    border:thin solid red;
+    padding-left: 8em;
+    
+  
+  }
+
+}
+
+
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0 25px;
+  }
+  .c1 {
+    width: 25%;
+    /* margin-top: 200px; */
+    margin-bottom: 200px;
+    
+  }
+
+  .container {
+    flex: 1 1 50%;
+    width: 75%;
+  }
+  #tweetContainer {
+    width: 100%;
+  }
+
+  .navBar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display:flex;
+  }
+
+  header {
+    height: 410px;
+  }
+
+  #tweet-text {
+  
+    margin-top: 198px;
+    
+  }
+
+  .userTweet {
+    width: 100%;
+
+    height: 50%;
+    
+  
+  }
+
+  .alert-char-exceeding {
+
+    font-family: 'Source Sans Pro', sans-serif;
+    display: flex;
+    align-items: center;
+    border:thin solid red;
+    padding-left: 1em;
+    padding-top: 3.5em;
+  
+  }
+  
+  .alert-tweet-blank {
+  
+    font-family: 'Source Sans Pro', sans-serif;
+    display: flex;
+    align-items: center;
+    border:thin solid red;
+    padding-left: 8em;
+    padding-top: 3.5em;
+  
+  }
+
+}
+
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
